--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
         <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
         <link  rel="stylesheet" type="text/css"  href="css/styles.css">
